--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 body {
   background-image: url("../assets/desktop_bg.png");
-  background-size: cover;
+  background-size: 100vw 100vh;
+  display: block;
   overflow: hidden;
   background-repeat: no-repeat;
   position: fixed;
@@ -103,7 +104,7 @@ input:focus {
 @media only screen and (max-width: 1300px) and (max-height: 1300px) {
   body {
     background-image: url("../assets/desktop_bg.PNG");
-    background-size: 100% 100vw;
+    background-size: 100vw 100vh;
   }
 
   #content {
